# CSCI2400-201_Demo

./: .gitignore  .gitignore.save  README.md
Wk01_DataI/: 00_shifts  00_shifts.c  01_byteOrder.c  02_stringContents.c  03_stringSize.c  MAIN_TEMPLATE_2400.c
Wk01_DataI/.ipynb_checkpoints/: Makefile-checkpoint
Wk02_DataII/: 04_fitsChar  04_fitsChar.c  MAIN_TEMPLATE_2400.c  Makefile  demo2400_helpers.c  demo2400_helpers.h
Wk03_Floats/: 01_badAdd  01_badAdd.c  02_nonAssoc  02_nonAssoc.c  03_floatTeardown  03_floatTeardown.c  MAIN_TEMPLATE_2400.c  Makefile  demo2400_helpers.h
Wk04_GDB-Bomb/gdb-tutorial/: GDB-Tutorial-01-basic.md  GDB-Tutorial-02-data.md  gdb-tutorial
Wk05_MiniBomb1/: BombRecord.txt  MiniBomb_mk1.c  RO.txt  SolveMiniBomb.md  bhex.txt  bomb  bomb.asm  input.txt  namesTable.txt  phase1.gdb  secret.asm  secret_NOTES.asm
Wk06_MiniBomb2/: MiniBomb_mk2.c  bomb  disasm_struct.md  phase1.asm  phase2.asm
Wk10_Optimization/: Wk10_Optimize.cpp  demo2400_helpers.cpp  demo2400_helpers.hpp
Wk13_ShellProcess/: CMakeLists.txt  bld.sh
Wk13_ShellProcess/include/: demo2400_helpers.hpp
Wk13_ShellProcess/src/: MicroShell.cpp  Process1.cpp  Process2.cpp  Process3.cpp  Process4.cpp  demo2400_helpers.cpp  infty1.cpp  infty2.cpp  u_add.cpp  u_echo.cpp  u_grid.cpp  u_infty.cpp
Wk15_XM4Review/: q1  q1_fork1.c  q2  q2_fork2.c  q3  q3_signal1.c  q4  q4_signal2.c
WkNN_Multithread/: 02_Deadlock  02_Deadlock.c  03_Prod-Cons.c  Makefile  busywork.h  demo2400_helpers.c
WkNN_Multithread/.ipynb_checkpoints/: 01_threads-checkpoint.c
